# neuroinformatics24

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
lectures/01_tTestAndRandomizationTests/: introAndHipothesisTests.tex
practicals/01_tTestAndRandomizationTests/: Makefile  checkSpelling.csh  introAndHipothesisTests.tex  lecture.dic
practicals/02_LFPs_spectralAnalysis/: Makefile  checkSpelling.csh  communications.bib  signalProcessing.bib  spectralAnalysis.tex
practicals/03_spectralAnalysisForNonStationarySignals/: Makefile  figTimeFreqUncertaintyHighFreqRes.tex  figTimeFreqUncertaintyHighTemporalRes.tex  nonStationarySpectralAnalysis.tex
practicals/04_circulaVariables_bootstrap/: Makefile  circularStatistics.pptx  circularVariablesStatExamples.tex  rhythms.bib
practicals/06_linearDynamicalSystems/: index.md
worksheets/01_tTestAndRandomizationTests/: worksheet_tTestAndRandomizationTests.tex
worksheets/02_LFPs_spectralAnalysis/: checkSpelling.csh  figFTcos.tex  worksheet_LPFs_spectralAnalysis.tex
worksheets/04_circularStats/: Makefile  travelingWaves.bib  worksheet_circularStatistics.tex
worksheets/05_SVD/: Makefile  worksheet_SVD.tex
worksheets/06_linearRegression/: Makefile  receptiveFields.bib  worksheet_linearRegression.tex
worksheets/07_linearDynamicalSystems/: Makefile  worksheet_linearDynamicalSystems.tex
worksheets/11_reinforcementLearning/: worksheet_reinforcementLearning.tex
worsheets/01_tTestAndRandomizationTests/: Makefile  worksheet_tTestAndRandomizationTests.tex
worsheets/02_LFPs_spectralAnalysis/: Makefile  (+2 more)
(+47 files in other folders)
