[metadata]
name = Neuroinformatics2024
version = 0.0.00
description = Repository with material for the 2024 edition of the Neuroinformatics course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/svGPFA
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir = 
     = src
packages = find:
install_requires = 
    numpy
    plotly

[options.packages.find]
where = src

[options.extras_require]
